# sonozap

./: Atomizer_Software_Protocol_V1.5F.md  README.md  atomizer-readme  pyproject.toml  sonaer_control_gui copy.py  sonaer_control_gui.py  sonaer_ns60k_kb.md  sonaer_preflight_gui.py
.claude/: settings.local.json
